samples/_failures_safe/1761531971_6ef534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fccf0ed.c: In function ‘main’:
./samples/SAFE/__tmp_7fccf0ed.c:119:12: error: missing terminating " character
  119 |     printf("Enter dimensions for second matrix (rows
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7fccf0ed.c:119:5: error: expected expression at end of input
  119 |     printf("Enter dimensions for second matrix (rows
      |     ^~~~~~
./samples/SAFE/__tmp_7fccf0ed.c:119:5: error: expected declaration or statement at end of input
